css fix for mobile, good enough for now.

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 <!--
-rags2riches
-save your love, i just want your company
-by tacklebox / coded by @LScorrcho (2020)
+rod wave - soulfly challenge
+it's funny and it's fascinatin' how even family hatin' !!!
+by tacklebox / coded by @LScorrcho (2021)
 -->
 
 <html lang="en" dir="ltr">
@@ -59,68 +59,71 @@ by tacklebox / coded by @LScorrcho (2020)
 			<img src="assets/header.png" alt="SoulFly Challenge" width="100%">
 		</div>
 
-		<div class="entry_submission">
-			<form class="form" action="">
-				<label>1. WHAT IS YOUR NAME?</label>
-				<br><input name="fname" type="text" placeholder="First Name">
-				<input name="lname" type="text" placeholder="Last Name">
+			<div class="content">
 
+			<div class="entry_submission">
+				<form class="form" action="">
+					<label>1. WHAT IS YOUR NAME?</label>
+					<br><input name="fname" type="text" placeholder="First Name">
+					<input name="lname" type="text" placeholder="Last Name">
+
+					<br>
+					<label>2. WHEN IS YOUR BIRTHDAY?</label>
+					<div class="birthdate_picker">
+						<span>
+							<select id="month" name="month">
+								<option disabled selected hidden>Month</option>
+								<option>January</option>
+								<option>February</option>
+								<option>March</option>
+								<option>April</option>
+								<option>May</option>
+								<option>June</option>
+								<option>July</option>
+								<option>August</option>
+								<option>September</option>
+								<option>October</option>
+								<option>November</option>
+								<option>December</option>
+							</select>
+						</span>
+						<span>
+							<select id="day" name="day">
+								<option disabled selected hidden>Day  </option>
+							</select>
+						</span>
+						<span>
+							<select id="year" name="year">
+								<option disabled selected hidden>Year  </option>
+							</select>
+						</span>
+
+					<br>
+					<label>3. WHAT IS YOUR EMAIL?</label>
+					<br><input name="email" type="email" placeholder="Email">
+
+					<br>
+					<label>3. WHAT MAKES YOU ROD WAVE'S BIGGEST FAN?
+					<br>RECORD YOUR ANSWER AND INCLUDE
+					<br>A SOUNDCLOUD LINK BELOW.</label>
+					<br><input name="email" type="email" placeholder="SoundCloud Link">
+
+					<br>
+					<input type="submit" value="SUBMIT">
+				</form>
+
+				<br>5. WIN TICKETS TO ROD WAVE'S
+				<br>SOULFLY TOUR IN YOUR CITY!
+
+			</div>
+
+			<iframe src=”assets/12231.mp3″ type=”audio/mp3″ allow=”autoplay” id=”audio” style="display:none; width: 1px; height: 1px;"></iframe>
+
+			<div class="testimonials">
+				<br>LISTEN TO MORE FAN TESTIMONIALS BELOW:
 				<br>
-				<label>2. WHEN IS YOUR BIRTHDAY?</label>
-				<div class="birthdate_picker">
-					<span>
-						<select id="month" name="month">
-							<option disabled selected hidden>Month</option>
-							<option>January</option>
-							<option>February</option>
-							<option>March</option>
-							<option>April</option>
-							<option>May</option>
-							<option>June</option>
-							<option>July</option>
-							<option>August</option>
-							<option>September</option>
-							<option>October</option>
-							<option>November</option>
-							<option>December</option>
-						</select>
-					</span>
-					<span>
-						<select id="day" name="day">
-							<option disabled selected hidden>Day  </option>
-						</select>
-					</span>
-					<span>
-						<select id="year" name="year">
-							<option disabled selected hidden>Year  </option>
-						</select>
-					</span>
-
-				<br>
-				<label>3. WHAT IS YOUR EMAIL?</label>
-				<br><input name="email" type="email" placeholder="Email">
-
-				<br>
-				<label>3. WHAT MAKES YOU ROD WAVE'S BIGGEST FAN?
-				<br>RECORD YOUR ANSWER AND INCLUDE
-				<br>A SOUNDCLOUD LINK BELOW.</label>
-				<br><input name="email" type="email" placeholder="SoundCloud Link">
-
-				<br>
-				<input type="submit" value="SUBMIT">
-			</form>
-
-			<br>5. WIN TICKETS TO ROD WAVE'S
-			<br>SOULFLY TOUR IN YOUR CITY!
-
-		</div>
-
-		<iframe src=”assets/12231.mp3″ type=”audio/mp3″ allow=”autoplay” id=”audio” style="display:none; width: 1px; height: 1px;"></iframe>
-
-		<div class="testimonials">
-			<br>LISTEN TO MORE FAN TESTIMONIALS BELOW:
-			<br>
-			<iframe id="soundcloudembed" width="600px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
+				<iframe id="soundcloudembed" width="600px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
+			</div>
 		</div>
 
 		<!-- <div class="calltoaction">
