fixing mobile a bit

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -97,6 +97,7 @@ by tacklebox / coded by @LScorrcho (2021)
 								<option disabled selected hidden>Year  </option>
 							</select>
 						</span>
+					</div>
 
 					<br>
 					<label>3. WHAT IS YOUR EMAIL?</label>
