--- a/RODWAVE2021gform/index.html
+++ b/RODWAVE2021gform/index.html
@@ -55,7 +55,7 @@ by tacklebox / coded by @LScorrcho (2021)
 		<link rel="stylesheet" href="css/style.css?rnd=80">
 	</head>
 	<body>
-		
+
 		<div class="splash">
 			<div class="splashcontent">
 				<img src="assets/header.png" alt="SoulFly Challenge" width="100%">
@@ -136,12 +136,10 @@ by tacklebox / coded by @LScorrcho (2021)
 
 				</div>
 
-				<iframe src=”assets/12231.mp3″ type=”audio/mp3″ allow=”autoplay” id=”audio” style="display:none; width: 1px; height: 1px;"></iframe>
-
 				<div class="testimonials">
 					<br>LISTEN TO MORE FAN VOICE MEMOS BELOW:
 					<br>
-					<iframe id="testimonialembed" width="600px" height="350px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
+					<iframe id="testimonialembed" width="600px" height="350px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
 				</div>
 
 			</div>
@@ -169,7 +167,7 @@ by tacklebox / coded by @LScorrcho (2021)
 		</div>
 
 		<footer class="sticky_sc_footer">
-			<iframe id="sc_footer_embed" width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+			<iframe id="sc_footer_embed" width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src=""></iframe>
 		</footer>
 
 		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
