--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -11,9 +11,9 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>Rod Wave - SoulFly Challenge</title>
-		<meta name="title" content="Rod Wave - SoulFly Challenge">
-		<meta name="description" content="Enter Rod Wave's SoulFly Challenge for a change to win tickets to his tour!">
+		<title>Rod Wave Day 1 Challenge</title>
+		<meta name="title" content="Rod Wave Day 1 Challenge">
+		<meta name="description" content="Enter Rod Wave's Day 1 Challenge for a change to win tickets to his tour!">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,16 +27,16 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta property="og:type" content="website">
 		<!-- TODO change this url -->
 		<!-- <meta property="og:url" content="https://rags-2-riches.com"> -->
-		<meta property="og:title" content="Rod Wave - SoulFly Challenge">
-		<meta property="og:description" content="Enter Rod Wave's SoulFly Challenge for a change to win tickets to his tour!">
+		<meta property="og:title" content="Rod Wave Day 1 Challenge">
+		<meta property="og:description" content="Enter Rod Wave's Day 1 Challenge for a change to win tickets to his tour!">
 		<!-- TODO change this image -->
 		<!-- <meta property="og:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<!-- <meta property="twitter:url" content="https://rags-2-riches.com"> -->
-		<meta property="twitter:title" content="Rod Wave - SoulFly Challenge">
-		<meta property="twitter:description" content="Enter Rod Wave's SoulFly Challenge for a change to win tickets to his tour!">
+		<meta property="twitter:title" content="Rod Wave Day 1 Challenge">
+		<meta property="twitter:description" content="Enter Rod Wave's Day 1 Challenge for a change to win tickets to his tour!">
 		<!-- <meta property="twitter:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
