--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -70,26 +70,30 @@ by tacklebox / coded by @LScorrcho (2021)
 
 		<div class="content">
 
-			<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL BE GIVEN 2 TICKETS TO ATTEND THE SOULFLY TOUR AT ONE OF THE CITIES CLOSEST TO THEM! IN ORDER TO QUALIFY:</p>
-			<p>1. ENTRANTS MUST RECORD AND SUBMIT A VOICE MEMO UP TO 60 SECONDS ON THEIR SOUNDCLOUD PROFILE ON WHY THEY ARE ROD WAVE’S BIGGEST FAN.</p>
-			<p>2. AFTER THE VOICE MEMO IS UPLOADED, APPLICANTS MUST TITLE THEIR UPLOAD ROD WAVE DAY 1 CONTEST AND INCLUDE THEIR IG HANDLE (EX: “ROD WAVE DAY 1 CONTEST - @RODWAVE”).</p>
-			<p>3. APPLICANTS MUST ADD THE HASHTAG <b>#RODWAVEDAY1</b> FOR THEIR UPLOAD.</p>
+			<div id="openingparagraph">
+				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR AT ONE OF THE CITIES CLOSEST TO THEM! IN ORDER TO QUALIFY YOU HAVE TO BE 18 OR OLDER. READ THE <b><u>TERMS & CONDITIONS.</u></b></p>
+			</div>
 
 			<div class="entry_submission">
+
+				<p>1) Record and upload a voice memo (60 seconds) to your Soundcloud profile on why you are Rod Wave’s biggest fan.</p>
+				<p>2) After the voice memo is uploaded, you must title your upload “Rod Wave Day 1 Contest”.</p>
+				<p>3) Add the hashtag <b>#RodWaveDay1</b> for your upload.</p>
+
 				<form class="form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
 					<p>
-						<label>4. APPLICANTS MUST SUBMIT THE SOUNDCLOUD LINK TO THE VOICE MEMO BELOW.</label>
+						<label>4) Submit the Soundcloud link below</label>
 						<br><input class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
 					</p>
 
 					<p>
-						<label>5. SUBMIT YOUR FIRST AND LAST NAME.</label>
+						<label>5) Submit your First and Last name?</label>
 						<br><input id="fname" name="entry.2092726799" type="text" placeholder="First Name">
 						<input id="lname" name="entry.1450099878" type="text" placeholder="Last Name">
 					</p>
 
 					<p>
-						<label>6. WHEN IS YOUR BIRTHDAY?</label>
+						<label>6) When is your birthday?</label>
 						<span class="birthdate_picker">
 							<br><span>
 								<select id="month" name="entry.1003999951">
@@ -122,12 +126,19 @@ by tacklebox / coded by @LScorrcho (2021)
 					</p>
 
 					<p>
-						<label>7. WHAT IS YOUR EMAIL?</label>
+						<label>7) What's your city, state, and zip code?</label>
+						<br><input id="city" name="" type="text" placeholder="City">
+						<input id="state" name="" type="text" placeholder="State">
+						<input id="zipcode" name="" type="text" placeholder="Zip Code">
+					</p>
+
+					<p>
+						<label>8) What is your email?</label>
 						<br><input class="fullwidth" name="entry.1451817724" type="email" placeholder="Email">
 					</p>
 
 					<p>
-						<label>8. WHAT IS YOUR PHONE NUMBER?</label>
+						<label>9) What is your phone number?</label>
 						<br><input class="fullwidth" name="entry.119122662" type="tel" placeholder="Phone Number">
 					<p>
 						<input type="submit" value="SUBMIT">
