--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -71,33 +71,33 @@ by tacklebox / coded by @LScorrcho (2021)
 		<div class="content">
 
 			<div id="openingparagraph">
-				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR AT ONE OF THE CITIES CLOSEST TO THEM! IN ORDER TO QUALIFY YOU HAVE TO BE 18 OR OLDER. READ THE <b><u>TERMS & CONDITIONS.</u></b></p>
+				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! MUST BE 18 OR OLDER TO QUALIFY. PLEASE READ THE <b><u>OFFICIAL RULES.</u></b></p>
 			</div>
 
 			<div class="entry_submission">
 
 				<p>1) Record and upload a voice memo (60 seconds) to your Soundcloud profile on why you are Rod Wave’s biggest fan.</p>
-				<p>2) After the voice memo is uploaded, you must title your upload “Rod Wave Day 1 Contest”.</p>
-				<p>3) Add the hashtag <b>#RodWaveDay1</b> for your upload.</p>
+				<p>2) After the voice memo is uploaded, title your upload <br>“Rod Wave Day 1 Contest”.</p>
+				<p>3) Add the hashtag <b>#RodWaveDay1</b> in the description.</p>
 
 				<form class="form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
 					<p>
-						<label>4) Submit the Soundcloud link below</label>
-						<br><input class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
+						<label>4) Submit the Soundcloud link below.</label>
+						<br><input required class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
 					</p>
 
 					<p>
-						<label>5) Submit your First and Last name?</label>
-						<br><input id="fname" name="entry.2092726799" type="text" placeholder="First Name">
-						<input id="lname" name="entry.1450099878" type="text" placeholder="Last Name">
+						<label>5) Submit your first and last name.</label>
+						<br><input required id="fname" name="entry.2092726799" type="text" placeholder="First Name">
+						<input required id="lname" name="entry.1450099878" type="text" placeholder="Last Name">
 					</p>
 
 					<p>
 						<label>6) When is your birthday?</label>
 						<span class="birthdate_picker">
 							<br><span>
-								<select id="month" name="entry.1003999951">
-									<option disabled selected hidden>Month</option>
+								<select required id="month" name="entry.1003999951">
+									<option value="" disabled selected hidden>Month</option>
 									<option>January</option>
 									<option>February</option>
 									<option>March</option>
@@ -113,33 +113,33 @@ by tacklebox / coded by @LScorrcho (2021)
 								</select>
 							</span>
 							<span>
-								<select id="day" name="entry.638240958">
-									<option disabled selected hidden>Day  </option>
+								<select required id="day" name="entry.638240958">
+									<option value="" disabled selected hidden>Day  </option>
 								</select>
 							</span>
 							<span>
-								<select id="year" name="entry.1258954455">
-									<option disabled selected hidden>Year  </option>
+								<select required id="year" name="entry.1258954455">
+									<option value="" disabled selected hidden>Year  </option>
 								</select>
 							</span>
 						</span>
 					</p>
 
 					<p>
-						<label>7) What's your city, state, and zip code?</label>
-						<br><input id="city" name="" type="text" placeholder="City">
-						<input id="state" name="" type="text" placeholder="State">
-						<input id="zipcode" name="" type="text" placeholder="Zip Code">
+						<label>7) What is your city, state, and zip code?</label>
+						<br><input required id="city" name="" type="text" placeholder="City">
+						<input required id="state" name="" type="text" placeholder="State">
+						<input required id="zipcode" name="" type="text" placeholder="Zip Code">
 					</p>
 
 					<p>
 						<label>8) What is your email?</label>
-						<br><input class="fullwidth" name="entry.1451817724" type="email" placeholder="Email">
+						<br><input required class="fullwidth" name="entry.1451817724" type="email" placeholder="Email">
 					</p>
 
 					<p>
 						<label>9) What is your phone number?</label>
-						<br><input class="fullwidth" name="entry.119122662" type="tel" placeholder="Phone Number">
+						<br><input required class="fullwidth" name="entry.119122662" type="tel" placeholder="Phone Number">
 					<p>
 						<input type="submit" value="SUBMIT">
 					</p>
@@ -169,11 +169,11 @@ by tacklebox / coded by @LScorrcho (2021)
 		</div> -->
 
 		<div class="footer">
-			<a href="https://rod-wave.com" class="footerlink" target="_blank">
+			<!-- <a href="https://rod-wave.com" class="footerlink" target="_blank"> -->
 				<img class="footerlogoimg alignleft" src="assets/rodwavelogo.png" alt="Rod Wave">
-			</a>
+			<!-- </a> -->
 			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img class="footerlogoimg alignright" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
+				<img class="footerlogoimg footerlogoimghover alignright" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
 			</a>
 			<div style="clear: both;"></div>
 		</div>
