--- a/chinocappin/index.html
+++ b/chinocappin/index.html
@@ -7,20 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   
   <script type="text/javascript">
-   // Update the 'nojs'/'js' class on the html node
+   // Redirect to phone/tablet as necessary
+(function(c,b,d){var a=function(){if(navigator.maxTouchPoints>1)return!0;if(window.matchMedia&&window.matchMedia("(-moz-touch-enabled)").matches)return!0;for(var a=["Webkit","Moz","O","ms","Khtml"],b=0,c=a.length;b<c;b++){var d=a[b]+"MaxTouchPoints";if(d in navigator&&navigator[d])return!0}try{return document.createEvent("TouchEvent"),!0}catch(f){}return!1}(),f=function(a){a+="=";for(var b=document.cookie.split(";"),c=0;c<b.length;c++){for(var d=b[c];d.charAt(0)==" ";)d=d.substring(1,d.length);if(d.indexOf(a)==
+0)return d.substring(a.length,d.length)}return null};if(f("inbrowserediting")!="true"){var h,f=f("devicelock");f=="phone"&&d?h=d:f=="tablet"&&b&&(h=b);if(f!=c&&!h)if(window.matchMedia)window.matchMedia("(max-device-width: 415px)").matches&&d?h=d:window.matchMedia("(max-device-width: 960px)").matches&&b&&a&&(h=b);else{var c=Math.min(screen.width,screen.height)/(window.devicePixelRatio||1),f=window.screen.systemXDPI||0,g=window.screen.systemYDPI||0,f=f>0&&g>0?Math.min(screen.width/f,screen.height/g):
+0;(c<=370||f!=0&&f<=3)&&d?h=d:c<=960&&b&&a&&(h=b)}if(h)b=document.location.search||"",d=document.location.hash||"",document.write('<style type="text/css">body {visibility:hidden}</style>'),document.location=h+b+d}})("desktop","","phone/index.html");
+
+// Update the 'nojs'/'js' class on the html node
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "jquery.museresponsive.js", "index.css"], "outOfDate":[]};
 </script>
   
+  <link media="only screen and (max-width: 370px)" rel="alternate" href="http://chinocappin.com/phone/index.html"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=18499471" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4143789780" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=18755091" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=205976244" id="nomq_pagesheet"/>
   <![endif]-->
     <!--HTML Widget code-->
   
@@ -51,7 +57,7 @@ html, body {overflow-x: hidden !important;}
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="1441"><!-- responsive breakpoint node -->
    <div class="clearfix shared_content" id="page" data-content-guid="page_content"><!-- group -->
-    <div class="size_fixed grpelem" id="u551"><!-- custom html -->
+    <div class="size_fixed grpelem shared_content" id="u551" data-content-guid="u551_content"><!-- custom html -->
      
  
 <!--
@@ -69,23 +75,164 @@ html, body {overflow-x: hidden !important;}
 
 
     </div>
-    <div class="clearfix grpelem" id="pu807"><!-- group -->
-     <div class="museBGSize grpelem" id="u807"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u645"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u706"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u837"><!-- content --></div>
-     <div class="museBGSize grpelem" id="u575"><!-- content --></div>
-     <div class="clearfix grpelem" id="u576-4"><!-- content -->
-      <p>*Click a ladder to continue</p>
+    <div class="clearfix grpelem" id="ppu807"><!-- column -->
+     <div class="clearfix colelem shared_content" id="pu807" data-content-guid="pu807_content"><!-- group -->
+      <div class="museBGSize grpelem" id="u807"><!-- content --></div>
+      <div class="museBGSize grpelem" id="u645"><!-- content --></div>
+      <!-- m_editable region-id="editable-static-tag-U706-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext museBGSize grpelem" id="u706" href="music-videos.html" data-href="page:U1530" data-muse-uid="U706"><!-- content --></a>
+      <!-- /m_editable -->
+      <div class="museBGSize grpelem" id="u837"><!-- content --></div>
+      <!-- m_editable region-id="editable-static-tag-U575-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext MuseLinkActive museBGSize grpelem" id="u575" href="index.html" data-href="page:U93" data-muse-uid="U575"><!-- content --></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U576-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <div class="clearfix grpelem" id="u576-4" data-muse-uid="U576" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+       <p>*Click a ladder to continue</p>
+      </div>
+      <!-- /m_editable -->
+      <div class="grpelem" id="u946"><!-- content --></div>
+      <div class="clearfix grpelem" id="u1177"><!-- column -->
+       <!-- m_editable region-id="editable-static-tag-U958-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <div class="clearfix colelem" id="u958-4" data-muse-uid="U958" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+        <p>Follow Chino Cappin'</p>
+       </div>
+       <!-- /m_editable -->
+       <div class="clearfix colelem" id="u1171"><!-- group -->
+        <div class="museBGSize grpelem" id="u965"><!-- content --></div>
+        <div class="museBGSize grpelem" id="u1123"><!-- content --></div>
+        <div class="museBGSize grpelem" id="u1092"><!-- content --></div>
+        <div class="museBGSize grpelem" id="u1061"><!-- content --></div>
+       </div>
+       <div class="clearfix colelem" id="u1165"><!-- group -->
+        <div class="museBGSize grpelem" id="u1030"><!-- content --></div>
+        <div class="museBGSize grpelem" id="u998"><!-- content --></div>
+        <div class="museBGSize grpelem" id="u979"><!-- content --></div>
+       </div>
+      </div>
+     </div>
+     <div class="clearfix colelem" id="pu940"><!-- group -->
+      <div class="grpelem shared_content" id="u940" data-content-guid="u940_content"><!-- content --></div>
+      <!-- m_editable region-id="editable-static-tag-U1188-BP_infinity" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext MuseLinkActive museBGSize grpelem shared_content" id="u1188" href="index.html" data-href="page:U93" data-muse-uid="U1188" data-content-guid="u1188_content"><!-- content --></a>
+      <!-- /m_editable -->
+      <div class="clearfix grpelem" id="u1297"><!-- column -->
+       <div class="clearfix colelem" id="u1315"><!-- group -->
+        <!-- m_editable region-id="editable-static-tag-U1200-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <div class="clearfix grpelem shared_content" id="u1200-4" data-muse-uid="U1200" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1200-4_content"><!-- content -->
+         <p>Stream</p>
+        </div>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1303-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <div class="clearfix grpelem shared_content" id="u1303-4" data-muse-uid="U1303" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1303-4_content"><!-- content -->
+         <p>&nbsp; |</p>
+        </div>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1206-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+        <a class="nonblock nontext clearfix grpelem shared_content" id="u1206-4" href="music-videos.html" data-href="page:U1530" data-muse-uid="U1206" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1206-4_content"><!-- content --><p>Music Videos</p></a>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1242-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <div class="clearfix grpelem shared_content" id="u1242-4" data-muse-uid="U1242" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1242-4_content"><!-- content -->
+         <p>&nbsp; |</p>
+        </div>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1266-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <div class="clearfix grpelem shared_content" id="u1266-4" data-muse-uid="U1266" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1266-4_content"><!-- content -->
+         <p>Store</p>
+        </div>
+        <!-- /m_editable -->
+       </div>
+       <!-- m_editable region-id="editable-static-tag-U1284-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <div class="clearfix colelem shared_content" id="u1284-4" data-muse-uid="U1284" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u1284-4_content"><!-- content -->
+        <p>© Chino Cappin'</p>
+       </div>
+       <!-- /m_editable -->
+      </div>
+      <div class="museBGSize grpelem shared_content" id="u1327" data-content-guid="u1327_content"><!-- content --></div>
      </div>
     </div>
    </div>
   </div>
   <div class="breakpoint" id="bp_1440" data-min-width="1081" data-max-width="1440"><!-- responsive breakpoint node -->
+   <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="size_fixed grpelem placeholder" data-placeholder-for="u551_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu807"><!-- column -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu807_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu940"><!-- group -->
+      <span class="grpelem placeholder" data-placeholder-for="u940_content"><!-- placeholder node --></span>
+      <!-- m_editable region-id="editable-static-tag-U1188-BP_1440" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u1188_content"><!-- placeholder node --></span>
+      <!-- /m_editable -->
+      <div class="clearfix grpelem temp_no_id" data-orig-id="u1297"><!-- column -->
+       <div class="clearfix colelem temp_no_id" data-orig-id="u1315"><!-- group -->
+        <!-- m_editable region-id="editable-static-tag-U1200-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u1200-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1303-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u1303-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+        <div class="clearfix grpelem" id="pu1242-4"><!-- group -->
+         <!-- m_editable region-id="editable-static-tag-U1242-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u1242-4_content"><!-- placeholder node --></span>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U1206-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u1206-4_content"><!-- placeholder node --></span>
+         <!-- /m_editable -->
+        </div>
+        <!-- m_editable region-id="editable-static-tag-U1266-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u1266-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+       </div>
+       <!-- m_editable region-id="editable-static-tag-U1284-BP_1440" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <span class="clearfix colelem placeholder" data-placeholder-for="u1284-4_content"><!-- placeholder node --></span>
+       <!-- /m_editable -->
+      </div>
+      <span class="museBGSize grpelem placeholder" data-placeholder-for="u1327_content"><!-- placeholder node --></span>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_1080" data-min-width="721" data-max-width="1080"><!-- responsive breakpoint node -->
    <span class="clearfix placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
   </div>
-  <div class="breakpoint" id="bp_1080" data-max-width="1080"><!-- responsive breakpoint node -->
-   <span class="clearfix placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
+  <div class="breakpoint" id="bp_720" data-max-width="720"><!-- responsive breakpoint node -->
+   <div class="clearfix temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="size_fixed grpelem placeholder" data-placeholder-for="u551_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu807"><!-- column -->
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu807_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu940"><!-- group -->
+      <span class="grpelem placeholder" data-placeholder-for="u940_content"><!-- placeholder node --></span>
+      <!-- m_editable region-id="editable-static-tag-U1188-BP_720" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <span class="nonblock nontext MuseLinkActive museBGSize grpelem placeholder" data-placeholder-for="u1188_content"><!-- placeholder node --></span>
+      <!-- /m_editable -->
+      <div class="clearfix grpelem temp_no_id" data-orig-id="u1297"><!-- column -->
+       <div class="clearfix colelem temp_no_id" data-orig-id="u1315"><!-- group -->
+        <!-- m_editable region-id="editable-static-tag-U1200-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u1200-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1303-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u1303-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+        <!-- m_editable region-id="editable-static-tag-U1206-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u1206-4_content"><!-- placeholder node --></span>
+        <!-- /m_editable -->
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu1242-4"><!-- group -->
+         <!-- m_editable region-id="editable-static-tag-U1242-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u1242-4_content"><!-- placeholder node --></span>
+         <!-- /m_editable -->
+         <!-- m_editable region-id="editable-static-tag-U1266-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+         <span class="clearfix grpelem placeholder" data-placeholder-for="u1266-4_content"><!-- placeholder node --></span>
+         <!-- /m_editable -->
+        </div>
+       </div>
+       <!-- m_editable region-id="editable-static-tag-U1284-BP_720" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+       <span class="clearfix colelem placeholder" data-placeholder-for="u1284-4_content"><!-- placeholder node --></span>
+       <!-- /m_editable -->
+      </div>
+      <span class="museBGSize grpelem placeholder" data-placeholder-for="u1327_content"><!-- placeholder node --></span>
+     </div>
+    </div>
+   </div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
