rodwave - started validation and other fixes

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -49,8 +49,6 @@ by tacklebox / coded by @LScorrcho (2021)
 		  gtag('config', 'UA-145096028-3');
 		</script>
 
-
-		<link rel='stylesheet' href='js/croppie.css'>
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 		<link rel="stylesheet" href="css/style.css?rnd=80">
 	</head>
@@ -71,19 +69,19 @@ by tacklebox / coded by @LScorrcho (2021)
 		<div class="content">
 
 			<div id="openingparagraph">
-				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! MUST BE 18 OR OLDER TO QUALIFY. PLEASE READ THE <b><u>OFFICIAL RULES.</u></b></p>
+				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! ALL TOUR DATES AT <a href="https://soulflytour.com/" target="_blank"><b><u>SOULFLYTOUR.COM</u></b></a>. MUST BE AGE OF MAJORITY IN THE STATE IN WHICH YOU RESIDE OR OLDER TO QUALIFY. PLEASE READ THE <b><u>OFFICIAL RULES</u></b>.</p>
 			</div>
 
 			<div class="entry_submission">
 
 				<p>1) Record and upload a voice memo (60 seconds) to your Soundcloud profile on why you are Rod Wave’s biggest fan.</p>
-				<p>2) After the voice memo is uploaded, title your upload <br>“Rod Wave Day 1 Contest”.</p>
+				<p>2) After the voice memo is uploaded, title <br>your upload “Rod Wave Day 1 Contest”.</p>
 				<p>3) Add the hashtag <b>#RodWaveDay1</b> in the description.</p>
 
-				<form class="form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
+				<form class="form" id="entryform" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
 					<p>
 						<label>4) Submit the Soundcloud link below.</label>
-						<br><input required class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
+						<br><input required class="fullwidth" name="entry.1619314826" type="url" placeholder="SoundCloud Link">
 					</p>
 
 					<p>
@@ -185,6 +183,7 @@ by tacklebox / coded by @LScorrcho (2021)
 		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 		<script src="https://w.soundcloud.com/player/api.js"></script>
+		<script src="js/jquery.validate.min.js"></script>
 		<script src="js/main.js" charset="utf-8"></script>
 
 		</script>
