added pdf for official rules

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -69,7 +69,7 @@ by tacklebox / coded by @LScorrcho (2021)
 		<div class="content">
 
 			<div id="openingparagraph">
-				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! ALL TOUR DATES AT <a href="https://soulflytour.com/" target="_blank"><b><u>SOULFLYTOUR.COM</u></b></a>. MUST BE AGE OF MAJORITY IN THE STATE IN WHICH YOU RESIDE OR OLDER TO QUALIFY. PLEASE READ THE <b><u>OFFICIAL RULES</u></b>.</p>
+				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! ALL TOUR DATES AT <a href="https://soulflytour.com/" target="_blank"><b><u>SOULFLYTOUR.COM</u></b></a>. MUST BE AGE OF MAJORITY IN THE STATE IN WHICH YOU RESIDE OR OLDER TO QUALIFY. PLEASE READ THE <a href="ROD_WAVE_Day_1_Contest_Official_Rules_080621.pdf"><b><u>OFFICIAL RULES</u></b></a>.</p>
 			</div>
 
 			<div class="entry_submission">
