--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!--
-rod wave - soulfly challenge
+rod wave - day 1 contest
 it's funny and it's fascinatin' how even family hatin' !!!
 by tacklebox / coded by @LScorrcho (2021)
 -->
@@ -15,6 +15,7 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta name="title" content="Rod Wave Day 1 Contest">
 		<meta name="description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
 
+		<link rel="canonical" href="https://rodwavecontest.com">
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -25,8 +26,7 @@ by tacklebox / coded by @LScorrcho (2021)
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<!-- TODO change this url -->
-		<!-- <meta property="og:url" content="https://rags-2-riches.com"> -->
+		<meta property="og:url" content="https://rodwavecontest.com">
 		<meta property="og:title" content="Rod Wave Day 1 Contest">
 		<meta property="og:description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
 		<!-- TODO change this image -->
@@ -34,19 +34,19 @@ by tacklebox / coded by @LScorrcho (2021)
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
-		<!-- <meta property="twitter:url" content="https://rags-2-riches.com"> -->
+		<meta property="twitter:url" content="https://rodwavecontest.com">
 		<meta property="twitter:title" content="Rod Wave Day 1 Contest">
 		<meta property="twitter:description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
 		<!-- <meta property="twitter:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145096028-3"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KH9CEBDTEB"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
-		  gtag('config', 'UA-145096028-3');
+		  gtag('config', 'G-KH9CEBDTEB');
 		</script>
 
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -56,134 +56,125 @@ by tacklebox / coded by @LScorrcho (2021)
 
 		<div class="splash">
 			<div class="splashcontent">
-				<img src="assets/header.png" alt="SoulFly Challenge" width="100%">
+				<img src="assets/header.png" alt="Rod Wave Day 1 Contest" width="100%">
 				<p><u>Continue ></u></p>
 			</div>
 		</div>
 
-
-		<div class="header">
-			<img src="assets/header.png" alt="SoulFly Challenge" width="100%">
-		</div>
-
-		<div class="content">
-
-			<div id="openingparagraph">
-				<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! ALL TOUR DATES AT <a href="https://soulflytour.com/" target="_blank"><b><u>SOULFLYTOUR.COM</u></b></a>. MUST BE AGE OF MAJORITY IN THE STATE IN WHICH YOU RESIDE OR OLDER TO QUALIFY. PLEASE READ THE <a href="ROD_WAVE_Day_1_Contest_Official_Rules_080621.pdf"><b><u>OFFICIAL RULES</u></b></a>.</p>
+		<div class="mainpage">
+			<div class="header">
+				<img src="assets/header.png" alt="Rod Wave Day 1 Contest" width="100%">
 			</div>
 
-			<div class="entry_submission">
+			<div class="content">
 
-				<p>1) Record and upload a voice memo (60 seconds) to your Soundcloud profile on why you are Rod Wave’s biggest fan.</p>
-				<p>2) After the voice memo is uploaded, title <br>your upload “Rod Wave Day 1 Contest”.</p>
-				<p>3) Add the hashtag <b>#RodWaveDay1</b> in the description.</p>
+				<div id="openingparagraph">
+					<p>WHAT MAKES YOU ROD WAVE'S BIGGEST FAN? 5 WINNERS WILL RECEIVE 2 TICKETS TO ATTEND THE SOULFLY TOUR IN ONE OF THE CITIES CLOSEST TO THEM! ALL TOUR DATES AT <a href="https://soulflytour.com/" target="_blank"><b><u>SOULFLYTOUR.COM</u></b></a>. MUST BE AGE OF MAJORITY IN THE STATE IN WHICH YOU RESIDE OR OLDER TO QUALIFY. PLEASE READ THE <a href="ROD_WAVE_Day_1_Contest_Official_Rules_080621.pdf" target="_blank"><b><u>OFFICIAL RULES</u></b></a>.</p>
+				</div>
 
-				<form class="form" id="entryform" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
-					<p>
-						<label>4) Submit the Soundcloud link below.</label>
-						<br><input required class="fullwidth" name="entry.1619314826" type="url" placeholder="SoundCloud Link">
-					</p>
+				<div class="entry_submission">
 
-					<p>
-						<label>5) Submit your first and last name.</label>
-						<br><input required id="fname" name="entry.2092726799" type="text" placeholder="First Name">
-						<input required id="lname" name="entry.1450099878" type="text" placeholder="Last Name">
-					</p>
+					<p>1) Record and upload a voice memo (60 seconds) to your Soundcloud profile on why you are Rod Wave’s biggest fan.</p>
+					<p>2) After the voice memo is uploaded, title <br>your upload “Rod Wave Day 1 Contest”.</p>
+					<p>3) Add the hashtag <b>#RodWaveDay1</b> in the description.</p>
 
-					<p>
-						<label>6) When is your birthday?</label>
-						<span class="birthdate_picker">
-							<br><span>
-								<select required id="month" name="entry.1003999951">
-									<option value="" disabled selected hidden>Month</option>
-									<option>January</option>
-									<option>February</option>
-									<option>March</option>
-									<option>April</option>
-									<option>May</option>
-									<option>June</option>
-									<option>July</option>
-									<option>August</option>
-									<option>September</option>
-									<option>October</option>
-									<option>November</option>
-									<option>December</option>
-								</select>
+					<form class="form" id="entryform" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
+						<p>
+							<label>4) Submit the Soundcloud link below.</label>
+							<br><input required class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
+						</p>
+
+						<p>
+							<label>5) Submit your first and last name.</label>
+							<br><input required id="fname" name="entry.2092726799" type="text" placeholder="First Name">
+							<input required id="lname" name="entry.1450099878" type="text" placeholder="Last Name">
+						</p>
+
+						<p>
+							<label>6) When is your birthday?</label>
+							<span class="birthdate_picker">
+								<br><span>
+									<select required id="month" name="entry.1003999951">
+										<option value="" disabled selected hidden>Month</option>
+										<option>January</option>
+										<option>February</option>
+										<option>March</option>
+										<option>April</option>
+										<option>May</option>
+										<option>June</option>
+										<option>July</option>
+										<option>August</option>
+										<option>September</option>
+										<option>October</option>
+										<option>November</option>
+										<option>December</option>
+									</select>
+								</span>
+								<span>
+									<select required id="day" name="entry.638240958">
+										<option value="" disabled selected hidden>Day  </option>
+									</select>
+								</span>
+								<span>
+									<select required id="year" name="entry.1258954455">
+										<option value="" disabled selected hidden>Year  </option>
+									</select>
+								</span>
 							</span>
-							<span>
-								<select required id="day" name="entry.638240958">
-									<option value="" disabled selected hidden>Day  </option>
-								</select>
-							</span>
-							<span>
-								<select required id="year" name="entry.1258954455">
-									<option value="" disabled selected hidden>Year  </option>
-								</select>
-							</span>
-						</span>
-					</p>
+						</p>
 
-					<p>
-						<label>7) What is your city, state, and zip code?</label>
-						<br><input required id="city" name="" type="text" placeholder="City">
-						<input required id="state" name="" type="text" placeholder="State">
-						<input required id="zipcode" name="" type="text" placeholder="Zip Code">
-					</p>
+						<p>
+							<label>7) What is your city, state, and zip code?</label>
+							<br><input required id="city" name="entry.722950643" type="text" placeholder="City">
+							<input required id="state" name="entry.363151559" type="text" placeholder="State">
+							<input required id="zipcode" name="entry.1532978133" type="text" placeholder="Zip Code">
+						</p>
 
-					<p>
-						<label>8) What is your email?</label>
-						<br><input required class="fullwidth" name="entry.1451817724" type="email" placeholder="Email">
-					</p>
+						<p>
+							<label>8) What is your email?</label>
+							<br><input required class="fullwidth" name="entry.1451817724" type="email" placeholder="Email">
+						</p>
 
-					<p>
-						<label>9) What is your phone number?</label>
-						<br><input required class="fullwidth" name="entry.119122662" type="tel" placeholder="Phone Number">
-					<p>
-						<input type="submit" value="SUBMIT">
-					</p>
-				</form>
+						<p>
+							<label>9) What is your phone number?</label>
+							<br><input required class="fullwidth" name="entry.119122662" type="tel" placeholder="Phone Number">
+						<p>
+							<input type="submit" value="SUBMIT">
+						</p>
+					</form>
+
+				</div>
+
+				<div class="testimonials">
+					<br>LISTEN TO MORE FAN VOICE MEMOS BELOW:
+					<br>
+					<!-- <iframe id="testimonialembed" width="600px" height="500px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe> -->
+					<iframe id="testimonialembed" width="600px" height="450px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+				</div>
 
 			</div>
 
-			<div class="testimonials">
-				<br>LISTEN TO MORE FAN VOICE MEMOS BELOW:
-				<br>
-				<!-- <iframe id="testimonialembed" width="600px" height="500px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe> -->
-				<iframe id="testimonialembed" width="600px" height="450px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+			<div class="footer">
+				<!-- <a href="https://rod-wave.com" class="footerlink" target="_blank"> -->
+					<img class="footerlogoimg alignleft" src="assets/rodwavelogo.png" alt="Rod Wave">
+				<!-- </a> -->
+				<a href="https://tacklebox.company" class="footerlink" target="_blank">
+					<img class="footerlogoimg footerlogoimghover alignright" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
+				</a>
+				<div style="clear: both;"></div>
 			</div>
 
+			<footer class="sticky_sc_footer">
+				<iframe id="sc_footer_embed" width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+			</footer>
 		</div>
-
-		<!-- <div class="calltoaction">
-			<img src="assets/pray4love.png" alt="Pray 4 Love Deluxe out now!" width="100%">
-		</div>
-
-		<div class="streaming">
-			<a href="https://open.spotify.com/album/5zCvAq0MLqUv0vE96iMbv2?si=VNDCOvvURv6WFRzotaS2zA" class="streaminglink" target="_blank"><img class="streamingimg" id="spotify" src="assets/dsp/spotify.png" alt="Listen on Spotify"></a>
-			<a href="https://music.apple.com/ca/album/pray-4-love/1504192331" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/apple.png" alt="Listen on Apple Music"></a>
-			<br><a href="https://tidal.com/browse/album/135327972" class="streaminglink" target="_blank"><img class="streamingimg" id="tidal" src="assets/dsp/tidal.png" alt="Listen on Tidal"></a>
-			<a href="https://soundcloud.com/rodwave/sets/pray-4-love" class="streaminglink" target="_blank"><img class="streamingimg" id="soundcloud" src="assets/dsp/soundcloud.png" alt="Listen on Soundcloud"></a>
-			<br><a href="https://www.youtube.com/watch?v=WO-jOWpwkk4" class="streaminglink" target="_blank"><img class="streamingimg" id="apple" src="assets/dsp/youtube.png" alt="Listen on YouTube"></a>
-		</div> -->
-
-		<div class="footer">
-			<!-- <a href="https://rod-wave.com" class="footerlink" target="_blank"> -->
-				<img class="footerlogoimg alignleft" src="assets/rodwavelogo.png" alt="Rod Wave">
-			<!-- </a> -->
-			<a href="https://tacklebox.company" class="footerlink" target="_blank">
-				<img class="footerlogoimg footerlogoimghover alignright" src="assets/tackleboxlogo.png" alt="Powered by Tacklebox">
-			</a>
-			<div style="clear: both;"></div>
-		</div>
-
-		<footer class="sticky_sc_footer">
-			<iframe id="sc_footer_embed" width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
-		</footer>
 
 		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 		<script src="https://w.soundcloud.com/player/api.js"></script>
 		<script src="js/jquery.validate.min.js"></script>
+		<script src="js/additional-methods.min.js"></script>
+		<script src="js/jqueryvalidateextend.js" charset="utf-8"></script>
 		<script src="js/main.js" charset="utf-8"></script>
 
 		</script>
