--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -29,7 +29,6 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta property="og:url" content="https://rodwavecontest.com">
 		<meta property="og:title" content="Rod Wave Day 1 Contest">
 		<meta property="og:description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
-		<!-- TODO change this image -->
 		<!-- <meta property="og:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
 
 		<!-- Twitter -->
@@ -81,7 +80,7 @@ by tacklebox / coded by @LScorrcho (2021)
 					<form class="form" id="entryform" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
 						<p>
 							<label>4) Submit the Soundcloud link below.</label>
-							<br><input required class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
+							<br><input required id="soundcloudinput" class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
 						</p>
 
 						<p>
