fixed soundcloud lowercase requirement

--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -29,14 +29,14 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta property="og:url" content="https://rodwavecontest.com">
 		<meta property="og:title" content="Rod Wave Day 1 Contest">
 		<meta property="og:description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
-		<!-- <meta property="og:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
+		<meta property="og:image" content="https://rodwavecontest.com/assets/ogimage.jpg">
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://rodwavecontest.com">
 		<meta property="twitter:title" content="Rod Wave Day 1 Contest">
 		<meta property="twitter:description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
-		<!-- <meta property="twitter:image" content="https://rags-2-riches.com/assets/bill_rod.jpg"> -->
+		<meta property="twitter:image" content="https://rodwavecontest.com/assets/ogimage.jpg">
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-KH9CEBDTEB"></script>
@@ -80,7 +80,7 @@ by tacklebox / coded by @LScorrcho (2021)
 					<form class="form" id="entryform" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfaR66XVPLjgKzaf9O_Z-3r9SPusq8hLo3nwzZe_O5YVLz9xg/formResponse">
 						<p>
 							<label>4) Submit the Soundcloud link below.</label>
-							<br><input required id="soundcloudinput" class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link">
+							<br><input required id="soundcloudinput" class="fullwidth" name="entry.1619314826" type="text" placeholder="SoundCloud Link" onkeyup="this.value = this.value.toLowerCase();">
 						</p>
 
 						<p>
