--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -16,9 +16,9 @@ by tacklebox / coded by @LScorrcho (2021)
 		<meta name="description" content="Enter Rod Wave's Day 1 Contest for a chance to win tickets to his tour!">
 
 		<link rel="canonical" href="https://rodwavecontest.com">
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<meta name="msapplication-TileColor" content="#ffc40d">
 		<meta name="theme-color" content="#ffffff">
 
