added marc boomin, artist rows of 2 on mobile

--- a/amco/index.html
+++ b/amco/index.html
@@ -89,7 +89,7 @@
                 <div class="artist-cont">
 
                     <div class="row justify-content-center">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
 							<div class="artphoto">
 								<a href="https://open.spotify.com/artist/10AY17ALos2o3akPqrPydw?si=_V3A5jo8SyqBRsC9pUw3rg&dl_branch=1">
 									<img src="img/roster/Father_Photo.jpg">
@@ -97,31 +97,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/4PfKPdq8QEgcerLwGApWIp?si=-J6PPoDBR0u2gr2rO8szfw&dl_branch=1">
-									<img src="img/roster/EGOVERT_Photo.jpg">
-									<div class="artname"><span>Egovert</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/56l5jbQerCGh7lfbwLnfaK?si=TtAP_j9CSgaUp5z7J332sQ&dl_branch=1">
-									<img src="img/roster/angelus_Photo.jpeg">
-									<div class="artname"><span>angelus</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://www.youtube.com/channel/UC5HgDpueurhM9oA2DPLGXlw">
-									<img src="img/roster/Goonew_Photo.jpg">
-									<div class="artname"><span>Goonew</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
 							<div class="artphoto">
 								<a href="https://www.youtube.com/channel/UCQ1SGQH1iBnfnNW1XcK4zxQ">
 									<img src="img/roster/Since99_Photo.jpg">
@@ -129,7 +105,31 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
+							<div class="artphoto">
+								<a href="https://open.spotify.com/artist/56l5jbQerCGh7lfbwLnfaK?si=TtAP_j9CSgaUp5z7J332sQ&dl_branch=1">
+									<img src="img/roster/angelus_Photo.jpeg">
+									<div class="artname"><span>angelus</span></div>
+								</a>
+							</div>
+						</div>
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
+							<div class="artphoto">
+								<a href="https://www.youtube.com/channel/UC5HgDpueurhM9oA2DPLGXlw">
+									<img src="img/roster/Goonew_Photo.jpg">
+									<div class="artname"><span>Goonew</span></div>
+								</a>
+							</div>
+						</div>
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
+							<div class="artphoto">
+								<a href="https://genius.com/artists/Marc-boomin">
+									<img src="img/roster/Marc_Boomin_Photo.jpg">
+									<div class="artname"><span>Marc Boomin</span></div>
+								</a>
+							</div>
+						</div>
+						<div class="col-6 col-xs-6 col-sm-4 col-lg-4">
 							<div class="artphoto">
 								<a href="https://genius.com/artists/Razjah">
 									<img src="img/roster/Razjah_Photo.jpeg">
