all 9/28 notes addressed - removed a lot of hover animations, change Try Again button to not refresh the page

--- a/LILDURK/index.html
+++ b/LILDURK/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<img class="logo" src="img/title.png" alt="Lil Durk Nickname Generator">
+			<a href=""><img class="logo" src="img/title.png" alt="Lil Durk Nickname Generator"></a>
 		</div>
 		<div id="info_entry" class="info_entry">
 			<p><label>ENTER YOUR NAME BELOW</label>
@@ -39,10 +39,10 @@
 		<div class="result">
 			<p>YOUR LIL DURK NICKNAME IS...
 			<p><div class="nickname"></div>
-			<p><input type="submit" value="Try Again" onclick="location.reload();">
+			<p><input type="submit" value="Try Again" onclick="resetPage();">
 
 			<div class="socials">
-				<p>SHARE YOUR NICKNAME:
+				<p><span style="padding-left: 6px">SHARE YOUR NICKNAME:</span>
 				<br><br><img class="socialimg" src="img/social/instagram.png" alt="Instagram">
 				<a id="twitter_share_btn" href="" target="_blank"><img class="socialimg" src="img/social/twitter.png" alt="Twitter"></a>
 				<img class="socialimg" src="img/social/snapchat.png" alt="Snapchat">
