fix centering of "share your nickname" on mobile

--- a/LILDURK/index.html
+++ b/LILDURK/index.html
@@ -42,7 +42,7 @@
 			<p><input type="submit" value="Try Again" onclick="resetPage();">
 
 			<div class="socials">
-				<p><span style="padding-left: 6px">SHARE YOUR NICKNAME:</span>
+				<p><span id="sharetext">SHARE YOUR NICKNAME:</span>
 				<br><br><img class="socialimg" src="img/social/instagram.png" alt="Instagram">
 				<a id="twitter_share_btn" href="" target="_blank"><img class="socialimg" src="img/social/twitter.png" alt="Twitter"></a>
 				<img class="socialimg" src="img/social/snapchat.png" alt="Snapchat">
