--- a/LILDURK/result.html
+++ b/LILDURK/result.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="result">
 			<p>YOUR LIL DURK NICKNAME IS...
-			<p><div class="nickname"></div>
+			<p><div class="nickname">THE HOOD SAVER</div>
 			<p><input type="submit" value="Try Again" onclick="location.reload();">
 
 			<div class="socials">
