new nickname call for canvas test

--- a/LILDURK/CANVASTEST_old/canvas.html
+++ b/LILDURK/CANVASTEST_old/canvas.html
@@ -10,13 +10,13 @@
 		<div class="load">
 		</div>
 		<div class="nickname">
-			<button type="button" onclick="generateRectangleCanvas(generateNickname())">GENERATE RECTANGLE CANVAS</button>
+			<button type="button" onclick="generateRectangleCanvas()">GENERATE RECTANGLE CANVAS</button>
 			<br><canvas id="rectangle_canvas" width="1200" height="630" style="border:1px solid black"></canvas>
 
-			<br><button type="button" onclick="generateSquareCanvas(generateNickname())">GENERATE SQUARE CANVAS</button>
+			<br><button type="button" onclick="generateSquareCanvas()">GENERATE SQUARE CANVAS</button>
 			<br><canvas id="square_canvas" width="1200" height="1200" style="border:1px solid black"></canvas>
 
-			<br><button type="button" onclick="generateIGStoryCanvas(generateNickname())">GENERATE IG STORY CANVAS</button>
+			<br><button type="button" onclick="generateIGStoryCanvas()">GENERATE IG STORY CANVAS</button>
 			<br><canvas id="igstory_canvas" width="1200" height="2133" style="border:1px solid black"></canvas>
 		</div>
 
